# notify-server

./: .flake8  .gitignore  .gitlab-ci.maxiv.yml  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-to-freeze.txt  requirements.txt  setup.py  sonar-project.properties  test-key.json
.github/workflows/: docker.yml  pre-commit.yml  pytest.yml
ESS Notify/: ESS_NotifyApp.swift  GraphicsUtilities.swift  Info.plist  ListNotificationsView.swift  LoginUtilities.swift  LoginView.swift  NotificationsUtilities.swift  NotificationsView.swift  PushUtilities.swift  ServicesUtilities.swift  ServicesView.swift  SingleNotificationView.swift  SplashView.swift  URLUtilities.swift
ESS Notify.xcodeproj/: project.pbxproj
Python Server/: access-list  main.py  services.json
alembic/: env.py
alembic/versions/: 06fd850a57c0_rename_apn_token_to_device_token.py  0881dca000d8_remove_token_from_database.py  43f8a46a10f4_add_login_token_expire_date.py  fcd46eadd970_initial_database_creation.py
app/: auth.py  command.py  cookie_auth.py  crud.py  database.py  deps.py  firebase.py  ios.py  main.py  models.py  monitoring.py  schemas.py  settings.py  utils.py
backend/: .dockerignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-to-freeze.txt  requirements.txt  setup.py
tests/: conftest.py  factories.py  test_auth.py  test_command.py  test_crud.py  test_firebase.py  test_ios.py  test_models.py  test_monitoring.py  test_schemas.py  test_utils.py  utils.py
(+54 files in other folders)
